Fix background issues on mobile devices
It appears that mobile devices ignore overflow attributes on the body
element. Moving relevant properties and ::before and ::after
pseudo-elements from body element to a .container div inside the body
seems to have fixed the issue.

--- a/styles.css
+++ b/styles.css
@@ -33,13 +33,15 @@
 body {
   background-color: var(--white);
   font-family: Rubik;
-  overflow-x: hidden;
-  padding: 4em 0 4em;
-  position: relative;
-  min-height: 100vh;
 }
 
-body::before {
+.container {
+  position: relative;
+  overflow-x: hidden;
+  padding: 4em 0 4em;
+}
+
+.container::before {
   content: "";
   position: absolute;
   z-index: -1;
@@ -51,7 +53,7 @@ body::before {
   background: linear-gradient(30deg, hsl(264, 100%, 61%), hsl(293, 100%, 63%) 180%);
 }
 
-body::after {
+.container::after {
   content: "";
   position: absolute;
   z-index: -1;
